# FerrisFire

./: .gitignore  Cargo.toml  README.md  ferrisfire.desktop
src/: config.rs  device.rs  gui.rs  humanize.rs  main.rs  proxy.rs  tray.rs
tests/: integration_tests.rs
tests/common/: mod.rs
