[package]
name = "ferrisfire"
version = "0.2.4"
edition = "2024"
description = "Low-latency mouse rapid-fire tool for Linux"
license = "MIT"

[[bin]]
name = "libinput-helper"
path = "src/main.rs"

[[bin]]
name = "diagnose"
path = "src/bin/diagnose.rs"

[dependencies]
evdev = "0.13.2"
eframe = "0.33.3"
egui = "0.33.3"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"
env_logger = "0.11.8"
dirs-next = "2.0.0"
libc = "0.2"
image = { version = "0.25.9", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
